[package]
name = "vinyl"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-fft = { version = "0.3.0", features = ["fft128"] }
flint-sys = "0.7.3"
num-modular = "0.6.1"
random = "0.14.0"
