[package]
name = "vinyl"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-fft = { version = "0.3.0", features = ["fft128"] }
flint-sys = "0.7.3"
swanky-field = { git = "https://github.com/GaloisInc/swanky", rev = "v0.6.0" }
swanky-field-f61p = { git = "https://github.com/GaloisInc/swanky", rev = "v0.6.0" }
rand = "0.8"
rand_distr = "0.4"
crypto-bigint = "0.5.5"
