[package]
name = "vinyl"
version = "0.1.0"
edition = "2021"

[lib]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "vinyl-bench"
harness = false
required-features = ["bench"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe-fft = { version = "0.6.0", features = ["fft128"] }
flint-sys = "0.7.3"
swanky-field = { git = "https://github.com/GaloisInc/swanky", rev = "v0.6.0" }
swanky-serialization = { git = "https://github.com/GaloisInc/swanky", rev = "v0.6.0" }
rand = "0.8"
rand_distr = "0.4"
crypto-bigint = "0.5.5"
generic-array = "1.1.1"
cfg-vis = "0.3.0"

[features]
default = []
bench = []
